# geberit-aquaclean

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  event.json  hacs.json  pyproject.toml
.github/: FUNDING.yml  dependabot.yml
POLICIES/: CLAUDE_POLICY.md
aquaclean_ble_relay/: alba_mock.py  mera_mock.py  mock_bluez_adapter.py  mock_logging.py  mock_persistence.py  mock_service.py
aquaclean_console_app/: ErrorCodes.py  FirmwareUpdateService.py  MqttService.py  PollStats.py  RestApiService.py  __main__.py  config.ini  main.py
docs/: ble-coexistence.md  bluetooth-troubleshooting.md  cli.md  configuration.md  connection-test.md  error-codes.md  esphome-developer-notes.md  esphome-troubleshooting.md  esphome.md  hacs-integration.md  home-assistant.md  modes-of-operation.md  modes.md  mqtt.md  on-demand-ble.md  performance-notes.md  rest-api.md  roadmap.md  use-cases.md  webapp.md
esphome/: aquaclean-proxy-c3.yaml  aquaclean-proxy-eth.yaml  aquaclean-proxy-wifi.yaml  aquaclean-proxy.yaml  ble-scan.py  bleak-esphome-probe.py  esphome-aioesphomeapi-probe-v3.py  esphome-aioesphomeapi-probe-v4.py  esphome-aioesphomeapi-probe.py  esphome-no-adv-probe.py  gatt-probe.py  secrets.yaml
homeassistant/: SETUP_GUIDE.md  configuration_hacs.yaml  configuration_mqtt.yaml  dashboard_button_card.yaml  dashboard_button_card_hacs.yaml  dashboard_simple_card.yaml  publish_discovery.py
lovelace/: dashboard-alba.yaml  dashboard-mera-comfort.yaml  dashboard-orientation-light-a.yaml  dashboard-orientation-light-button-card.yaml  dashboard-orientation-light-option2.yaml  dashboard-orientation-light.yaml  dashboard.yaml
memory/: alba-encryption-analysis.md
operation_support/: BLE_COMMAND_REFERENCE.md  aquaclean-bridge.logrotate  aquaclean-bridge.service  aquaclean.service  ble_procedure_probe.py  crontab.txt  install.sh  monitor_aquaclean_process.md  setup-service.sh  start_aquaclean.sh  update-to-branch.sh  update.sh  xml2svg.sh
tests/: test_alba_mock_webui.py  test_arendi_security.py  test_ble20_client.py  test_mera_mock_webui.py  test_mock_logging.py  test_pcapng_handshake.py
tools/: active-common-settings-probe.py  alba-ble20-probe.py  alba-decrypt-analysis.py  analyze-btmon-mock.py  analyze-ips.py  android-ble-analyze.py  android-ble-arendi-decode.py  aquaclean-connection-test.py  arendi-decrypt-session.py  audit-nrf-ble-analyze-coverage.py  ble-decode.md  ble-decode.py  ble-session-replay.py  compare-nrf-md.py  decode-pcapng.sh  filter-probe.py  find-geberit-remote.py  gatt-discovery-test.py  geberit-ble-probe.py  geberit-firmware-download.py  generate-alba-entity-docs.py  generate-hacs-entity-docs.py  getspl-filter-probe.py  ios-svg-to-graphics.py  minimal-central.py  minimal-peripheral.py  mock-geberit-alba.py  mock-geberit-mera.py  (+4 more)
(+396 files in other folders)
