[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geberit-aquaclean"
version = "2.4.41"
description = "Python bridge between Geberit AquaClean toilet (BLE) and home automation (MQTT/REST)"
requires-python = ">=3.11"
dependencies = [
    "bleak>=2.0.0",       # note: 2.1.x may slow BLE connect on RPi5 BCM4345C0 + BlueZ 5.84
                          # (2.0.0 = ~1.8 s, 2.1.1 = ~25 s); ESP32 proxy is unaffected.
                          # HA ships bleak 2.1.1 — upper bound removed to allow HACS installation.
    "aioesphomeapi",
    "aiorun",
    "fastapi",
    "uvicorn",
    "paho-mqtt",
]

[project.scripts]
aquaclean-bridge = "aquaclean_console_app.__main__:entry_point"

[tool.setuptools.packages.find]
where = ["."]
include = ["aquaclean_console_app*"]

[tool.setuptools.package-data]
"aquaclean_console_app" = ["static/*", "config.ini"]
